<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin"
    tools:context="com.mofagundez.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_field"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:maxLength="20"
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/name_hint"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity_field"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_quantity_final"
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:text="@string/quantity_zero"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_increase_one"
            android:layout_width="@dimen/increase_decrease_one_button_width"
            android:layout_height="@dimen/increase_decrease_one_button_height"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/button_increase_one"/>
        <Button
            android:id="@+id/button_decrease_one"
            android:layout_width="@dimen/increase_decrease_one_button_width"
            android:layout_height="@dimen/increase_decrease_one_button_height"
            android:text="@string/button_decrease_one"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/modify_quantity_field"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_increase_n"
            android:layout_width="@dimen/increase_decrease_one_button_width"
            android:layout_height="@dimen/increase_decrease_one_button_height"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/button_increase_one"/>

        <EditText
            android:id="@+id/edit_text_quantity"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_weight="1"
            android:hint="@string/quantity_ten"
            android:inputType="number"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_decrease_n"
            android:layout_width="@dimen/increase_decrease_one_button_width"
            android:layout_height="@dimen/increase_decrease_one_button_height"
            android:text="@string/button_decrease_one"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_field"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="@dimen/zero_layout_width_height"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:textSize="@dimen/standard_font_size"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:src="@drawable/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_layout_width_height"
            android:layout_weight="4"
            android:scaleType="centerCrop"/>

        <Button
            android:id="@+id/button_select_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_layout_width_height"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/button_select_image"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_order_from_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/standard_margin"
        android:visibility="gone"
        android:text="@string/button_order_supplier"/>


</LinearLayout>
